update font sie, line spacing and resolved issues with mobile responsivness on blog articles

--- a/scss/Pages/Blogs.scss
+++ b/scss/Pages/Blogs.scss
@@ -16,22 +16,45 @@
 	box-shadow: 0 0.25rem 0.5rem rgba(0.05, 0.05, 0.05, 0.15),
 		0 0.25rem 0.5rem rgba(0.05, 0.05, 0.05, 0.23);
 
-	@media only screen and (min-width: 1000px) {
-		width: 60%;
-		padding-left: 4rem;
-		padding-right: 4rem;
+	@media only screen and (max-width: 1000px) {
+		width: 100%;
+
+		div {
+			overflow: scroll;
+			margin-left: auto;
+			margin-right: auto;
+			width: 95%;
+		}
+
+		h1,
+		h2,
+		h3,
+		h4,
+		p {
+			padding-left: 24px;
+			padding-right: 24px;
+		}
+		background-color: #ffffff;
+
+		padding-left: 0rem;
+		padding-right: 0rem;
 	}
-	background-color: #ffffff;
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+
+	width: 60%;
+	padding-left: 4rem;
+	padding-right: 4rem;
 
 	p > img {
 		height: auto;
 		max-width: 80%;
 		display: block;
 		margin: auto;
+
+		@media only screen and (max-width: 1000px) {
+			max-width: 100%;
+		}
 	}
 
 	p > code {
