--- a/site.scss
+++ b/site.scss
@@ -22,18 +22,16 @@ h1 {
 }
 
 html {
-	font-size: 14px;
+	font-size: 18px;
 	font-family: Verdana, sans-serif;
+}
+
+p {
+	line-height: 1.75;
 }
 
 li {
 	list-style-type: disclosure-closed;
-}
-
-@media (min-width: 768px) {
-	html {
-		font-size: 16px;
-	}
 }
 
 .container {
